--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM jupyter/minimal-notebook:latest
+FROM jupyter/minimal-notebook:python-3.9.12
 
 COPY ./requirements.txt /tmp/
 RUN pip install --requirement /tmp/requirements.txt && \
